# uta-ai-chatbot

./: .gitignore  README.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
backend/api/: chat.py  orders.py  products.py  sessions.py  websocket_manager.py
backend/db/: mongodb.py  qdrant.py  seed.py
backend/models/: __init__.py  schemas.py
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  page.tsx
client/app/chat/: page.tsx
client/app/dashboard/: page.tsx
client/components/chat/: card-renderer.tsx  cards.tsx  handoff-card.tsx  help-menu-card.tsx  markdown-renderer.tsx  order-status-card.tsx  product-cards.tsx  refund-status-card.tsx  return-confirmation-card.tsx  return-policy-card.tsx
client/components/dashboard/: chat-viewer.tsx  chats-tab.tsx  orders-tab.tsx  products-tab.tsx
client/components/ui/: badge.tsx  button.tsx  input.tsx
client/lib/: utils.ts
